<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:id="@+id/fhRefreshLayout"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/fhMainScrollView"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragments.HomeFragment">

            <TextView
                android:id="@+id/fhDiscoverTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/fhUserPicIB"
                app:layout_constraintBottom_toBottomOf="@id/fhUserPicIB"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:text="@string/fh_discover"
                android:textSize="@dimen/fragment_title_tv_size"
                android:fontFamily="@font/inter_bold"
                app:layout_constraintHorizontal_bias=".02"/>


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/fhUserPicIB"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/music_hub_icon"
                app:shapeAppearanceOverlay="@style/FH_UserPicSIVCorners"
                android:layout_marginTop="10dp"
                app:layout_constraintHorizontal_bias=".97"/>

            <TextView
                android:id="@+id/fhTopPicksTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fh_top_picks"
                app:layout_constraintTop_toBottomOf="@id/fhUserPicIB"
                app:layout_constraintStart_toStartOf="@id/fhDiscoverTV"
                android:textSize="16sp"
                android:fontFamily="@font/inter_semi_bold"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/fhTopPicksPlayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                app:layout_constraintTop_toTopOf="@id/fhTopPicksTV"
                app:layout_constraintBottom_toBottomOf="@id/fhTopPicksTV"
                app:layout_constraintEnd_toEndOf="@id/fhUserPicIB"
                android:clickable="true"
                style="@style/FH_PlayButtonStyle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fhTopPicksContainerRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fhTopPicksTV"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/fhQuickPicksTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fh_quick_picks"
                app:layout_constraintTop_toBottomOf="@id/fhTopPicksContainerRV"
                app:layout_constraintStart_toStartOf="@id/fhTopPicksTV"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_semi_bold"
                android:textColor="@color/black"/>

            <ImageButton
                android:id="@+id/fhQuickPicksPlayIB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/fhQuickPicksTV"
                app:layout_constraintBottom_toBottomOf="@id/fhQuickPicksTV"
                app:layout_constraintEnd_toEndOf="@id/fhTopPicksPlayBtn"
                android:src="@drawable/play_circle_filled_icon"
                android:background="@android:color/transparent"
                android:contentDescription="@string/image_desc"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fhQuickPicksContainerRV"
                android:layout_width="0dp"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@id/fhQuickPicksTV"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/fhRecommendedTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fh_recommended"
                app:layout_constraintTop_toBottomOf="@id/fhQuickPicksContainerRV"
                app:layout_constraintStart_toStartOf="@id/fhTopPicksTV"
                android:textSize="16sp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/inter_semi_bold"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/fhRecommendedPlayBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                app:layout_constraintTop_toTopOf="@id/fhRecommendedTV"
                app:layout_constraintBottom_toBottomOf="@id/fhRecommendedTV"
                app:layout_constraintEnd_toEndOf="@id/fhTopPicksPlayBtn"
                android:clickable="true"
                style="@style/FH_PlayButtonStyle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fhRecommendedContainerRV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/fhRecommendedTV"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/fhBottomSpaceV"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/fhBottomSpaceV"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:background="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <FrameLayout
                android:id="@+id/fhLoadingBarContainerFL"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"
                android:alpha="0"
                android:background="@color/white">

                <ProgressBar
                    android:id="@+id/fhLoadingBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="300dp"
                    android:indeterminateTint="@color/hard_pink"/>

            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


